# consensus-sentry

./: .gitattributes  .gitignore  README.md  dfx.json  dump.rdb  pnpm-lock.yaml  requirements.txt
api/toxic-classifier/: Dockerfile  requirements.txt  toxic_classifier.onnx
client/: README.md  next.config.ts  package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/components/: bias-demo.tsx  contributions.tsx  (+8 more)
client/content/: bias-examples.ts
client/learnings/: scroll-driven-pipeline.md
data/: upload_hf.py
data/onnx/: distilbert_model.onnx  inference-spaCy.py  inference.py
data/raw/: convert.py  interface.py
docs/design_docs/: ree_deployment.md  rule_engine.md
experiments/model_testing/: regex.ipynb  toxicity_detection.py  toxicity_prediction.ipynb
experiments/rules/: faiss_test.py  locustfile.py  tes.py  test1.py  test2.py  test4.py  wordnet1.py
experiments/rust_port/: README.md
experiments/spacy/: ner.py  spacypipeline.ipynb  spacytokenization.ipynb
ic-ai/: Cargo.toml  README.md  dfx.json
ic-embedding/: README.md
ic-embedding/scripts/: build.sh  upload_model.sh
icp/: Cargo.toml  README.md  dfx.json  index.html  package.json  pnpm-lock.yaml
ree/: Dockerfile  gaurd.py
rust_port/: Cargo.toml
rust_port/src/: main.rs
sentry/: package-lock.json  package.json  tsconfig.json
sentry/src/: index.ts
v1/: README.md  package-lock.json  package.json
v1/api/: README.md
v1/icp/: dfx.json  pnpm-lock.yaml  tailwind.config.js
v1/ree/: requirements.txt  rules.json
v1/sentry/: README.md  jest.config.js
(+77 files in other folders)
