[package]
name = "rust_port"
version = "0.1.0"
edition = "2021"

[dependencies]
tract-core = "0.19.0"      
tract-onnx = "0.19.0"      
ndarray = "0.15.4"
tokenizers = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1